--- a/config/database.yml
+++ b/config/database.yml
@@ -79,8 +79,12 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
+# production:
+#   <<: *default
+#   database: horizon_production
+#   username: horizon
+#   password: <%= ENV["HORIZON_DATABASE_PASSWORD"] %>
+
 production:
   <<: *default
-  database: horizon_production
-  username: horizon
-  password: <%= ENV["HORIZON_DATABASE_PASSWORD"] %>
+  url: <%= ENV['DATABASE_URL'] %>
